immich/deployment.ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
spec:
  selector:
    matchLabels:
      app: immich-ml
  replicas: 0
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-machine-learning:v1.123.0
          ports:
            - name: http
              containerPort: 3003
          volumeMounts:
            - name: immich-ml-data
              mountPath: /cache
      volumes:
        - name: immich-ml-data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/immich/ml
