immich/deployment.postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: immich-db
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-db
        role: db
    spec:
      containers:
        - name: postgresql
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          ports:
            - name: postgresql
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/immich/db
