immich/deployment.server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  selector:
    matchLabels:
      app: immich
  replicas: 0
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v1.123.0
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: immich-data
              mountPath: /usr/src/app/upload
              subPath: data
      volumes:
        - name: immich-data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/immich
