immich/deployment.test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-test
spec:
  selector:
    matchLabels:
      app: immich-test
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-test
    spec:
      containers:
        - name: test
          image: alpine:latest
          command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: immich-data
              mountPath: /usr/src/app/upload
      volumes:
        - name: immich-data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/immich/data
