immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  selector:
    matchLabels:
      app: immich
  replicas: 0
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v1.123.0
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: immich-data
              mountPath: /usr/src/app/upload
              subPath: data
      volumes:
        - name: immich-data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/immich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
spec:
  selector:
    matchLabels:
      app: immich-ml
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-machine-learning:v1.123.0
          ports:
            - name: http
              containerPort: 3003
          volumeMounts:
            - name: immich-ml-data
              mountPath: /cache
              subPath: ml
      volumes:
        - name: immich-ml-data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/immich
---
apiVersion: v1
kind: Pod
metadata:
  name: data-yankening
spec:
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: immich
          mountPath: /data
  volumes:
    - name: immich
      nfs:
        server: hactar.lan
        path: /mnt/tank/server/immich
