immich/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-cache
spec:
  serviceName: immich-cache
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2-alpine
          command:
            - redis-server
            - "/redis-config/redis.conf"
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: immich-cache
              mountPath: /data
            - name: redis-config
              mountPath: /redis-config
      volumes:
        - name: redis-config
          configMap:
            name: redis-config
            items:
              - key: redis.conf
                path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: immich-cache
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: nfs
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-cache
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
