immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  selector:
    app: immich
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
