immich/ingress.http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: immich-redirect@kubernetescrd
spec:
  rules:
    - host: immich.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  name: http
